# vmkit-core

./: .cursorignore  Cargo.toml  README.md
vmkit/: Cargo.toml
vmkit-proc/: Cargo.toml  README.md
vmkit-proc/src/: bytecode.rs  lib.rs
vmkit-proc/src/bytecode/: decl.rs  fits.rs
vmkit/docs/: bdwgc.md
vmkit/examples/: binarytrees-mt.c  binarytrees.c  binarytrees.rs
vmkit/src/: bdwgc_shim.rs  build.rs  lib.rs  machine_context.rs  macros.rs  main.rs  mm.rs  object_model.rs  options.rs  platform.rs  sync.rs  threading.rs
vmkit/src/mm/: active_plan.rs  align.rs  aslr.rs  collection.rs  conservative_roots.rs  ref_glue.rs  scanning.rs  spec.rs  stack_bounds.rs  tlab.rs  traits.rs
vmkit/src/object_model/: compression.rs  finalization.rs  header.rs  metadata.rs  object.rs
vmkit/src/platform/: dynload.rs
vmkit/src/sync/: monitor.rs  semaphore.rs
